fix: style device spacing

--- a/src/app/device/config-device/config-device.component.scss
+++ b/src/app/device/config-device/config-device.component.scss
@@ -11,7 +11,7 @@
     left: 19px;
   }
   .grid-area {
-    top: 42px;
+    top: 0px;
     margin-top: 5px;
     position: relative;
     height: 95%;
